@@ -1,3 +1,7 @@
+23 May 2018: Wouter
+	- Use accept4 to speed up incoming TCP (and TLS) connections,
+	  available on Linux and FreeBSD.
+
 17 May 2018: Ralph
 	- Qname minimisation default changed to yes.
 
